fix header button alignment in css

--- a/calendrier/header_2.css
+++ b/calendrier/header_2.css
@@ -5,8 +5,7 @@ body{
 
 header{
     display: flex;
-    height: 10vmin;
-    min-height: 80px;
+    height: max(10vmin, 80px);
     flex-direction: row;
     background-color: #FFFFFF;
     align-items: center;
@@ -56,6 +55,7 @@ header{
 #button_container{
     display: flex;
     justify-content: flex-start;
+    align-items: center;
     gap: 10vmin;
     height: 10vmin;
     min-height: 80px;
@@ -64,7 +64,6 @@ header{
 }
 
 .header_boutons {
-    margin-top: 2.5vmin;
     width: 15rem;
     height: 5vmin;
     min-height: 40px;
@@ -97,7 +96,7 @@ header{
 }
 
 #conteneur_profile{
-    height: 40vmin;
+    height: 30vmin;
     min-height: 80px;
     width: 16vmin;
     display: flex;
